# humaid-soul

./: .gitignore  README.md
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: dictionary.rs  lib.rs  pdf_extract.rs
docs/: GETTING_STARTED.md
scripts/: build_dictionary.py  build_legal_dict.py  build_medical_dict.py  build_piper_models.py  generate_deltas.py  generate_icon.py
ui/: pubspec.yaml
ui/android/: build.gradle  local.properties
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/lib/: asset_loader.dart  core_bridge.dart  main.dart  vocab.dart
ui/lib/ffi/: native_bridge.dart
ui/lib/screens/: about_screen.dart  doc_stats_screen.dart  find_in_document.dart  knowledge_graph_screen.dart  library.dart  reader.dart  search_screen.dart  soul_pack_screen.dart  test_lookup.dart  vocabulary.dart  voice_soul_screen.dart
ui/lib/services/: anki_export.dart  auto_link_service.dart  content_manager.dart  continuous_tts.dart  delta_updater.dart  knowledge_graph_service.dart  library_service.dart  pdf_text_service.dart  piper_voice_service.dart  reading_position.dart  recent_documents.dart  search_service.dart  soul_pack.dart  sync_service.dart  tfidf_service.dart  thumbnail_service.dart  tier_highlighter.dart  tts_service.dart  update_service.dart  vocab_bank.dart  voice_pack_manager.dart  word_map_cache.dart
ui/lib/widgets/: auto_link_painter.dart  custom_pdf_viewer.dart  error_boundary.dart  ghost_hud.dart  graph_painter.dart  tier_overlay_painter.dart  welcome_dialog.dart
