[package]
name = "humaid_soul_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "humaid_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }   # includes SQLite
strsim = "0.11"                                           # Levenshtein etc.
zstd = "0.13"                                            # decompress dictionary
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
