[package]
name = "humaid_soul_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "humaid_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
strsim = "0.11"
